--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,6 +11,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f5f5f5;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 code {
